test/compile_errors/err_struct_lit_bad_token.w
//! expect-check-fail: unknown type 'Foo'
fn main:
    let g = Foo { 123 }
